Archive2/ca/537ab1efae307e/output
g++ (GCC) 4.9.2
Copyright (C) 2014 Free Software Foundation, Inc.
This is free software; see the source for copying conditions.  There is NO
warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

main.cpp:4:8: error: variable or field 'f' declared void
 void f(A<0>=0);
        ^
main.cpp:4:8: error: parse error in template argument list
main.cpp:4:14: error: expected primary-expression before ')' token
 void f(A<0>=0);
              ^
clang version 3.5.0 (tags/RELEASE_350/final 217394)
Target: x86_64-unknown-linux-gnu
Thread model: posix
main.cpp:4:14: error: expected '>'
void f(A<0>=0);
             ^
main.cpp:4:14: error: expected '>'
2 errors generated.
