Archive2/ca/537ab1efae307e/main.cpp
template <int>
using A = int;

void f(A<0>=0);

int main() {}